# bases_de_dados_heterogeneas_liga_educacional

./: .gitignore  CMakeLists.txt  arrays.c  control_structures.c  data_types.c  functions_1.c  functions_2.c  main.c  sample_struct.c  sample_union.c  scan_and_print.c
phase_1/pointers/: advantages_of_the_ponteiros_pass.c  advantages_of_using_pointers_in_strings.c  array_and_pointers_1.c  array_and_pointers_2.c  benefits_of_pointers_for_pointers.c  concept_of_pointers_to_pointers.c  increment_and_decrement_of_pointers.c  passing_pointers_to_functions.c  understanding_pointer_arithmetic.c  uses_of_pointers_for_pointers.c
phase_1/pointers/dynamic_allocation/: learning_calloc.c  learning_malloc.c  practical_examples_of_memory_allocation_and_release.c
phase_1/recursion/: binary_tree.c  fibonacci.c  graph.c
phase_1/study_case/: study_case.c
phase_2/: advanced_queue.c  avl_tree.c  binary_tree.c  bubble_sort.c  bubble_sort_double_linked_list.c  bubble_sort_linked_list.c  bucket_sort.c  counting_sort.c  dynamic_array_resizing.c  heap_sort.c  insertion_sort.c  linear_list.c  list.c  merge_sort.c  queue.c  quick_sort.c  radix_sort.c  selection_sort.c  shell_sort.c  stack.c  stack_postfix_infix.c  tim_sort.c  tree_sort.c
phase_3/: distributed_system.c
pointers/: addition_and_subtraction_with_pointers.c  advantages_of_the_ponteiros_pass.c  advantages_of_using_pointers_in_strings.c  array_and_pointers_1.c  array_and_pointers_2.c  benefits_of_pointers_for_pointers.c  concept_of_pointers_to_pointers.c  considerations_about_passing_pointers.c  increment_and_decrement_of_pointers.c  manipulating_strings_with_pointers.c  passing_pointers_to_functions.c  practical_effects_of_pointer_arithmetic.c  string_functions_using_pointers.c  understanding_pointer_arithmetic.c  understanding_pointers.c  uses_of_pointers_for_pointers.c
pointers/dynamic_allocation/: learning_calloc.c  learning_free.c  learning_malloc.c  learning_realloc.c  practical_examples_of_memory_allocation_and_release.c
recursion/: binary_tree.c  fibonacci.c  graph.c  linked_list.c  simple_sample.c
study_case/: study_case.c
syntax/: arrays.c  control_structures.c  sample_struct.c
